@@ -3,7 +3,7 @@
         Build file for opensiddur
     </description>
     <property name="lib.dir" location="lib"/>
-	<property name="installer" location="${lib.dir}/exist/installer/eXist-db-setup-2.1-rev.jar"/>
+	<property name="installer" location="${lib.dir}/exist/installer/eXist-db-setup-2.2-rev.jar"/>
 	<property name="build" location="build"/>
     <property name="dist" location="dist"/>
 
@@ -250,6 +250,23 @@ cacheSize=${cache.size}
             <arg value="-ouri=xmldb:exist://"/>
             <!-- DEBUG_OPTS seems to be the only way to force options after java.endorsed.dirs -->
             <env key="DEBUG_OPTS" value="-Djava.endorsed.dirs=${installdir}/lib/optional:${installdir}/lib/endorsed"/>
+        </exec>
+        <!-- schema update -->    
+        <exec
+            executable="${installdir}/bin/client.sh"
+            dir="${installdir}"
+            inputstring="xquery version '3.0';
+            import module namespace upg='http://jewishliturgy.org/modules/upgrade'
+                at 'xmldb:exist:///apps/opensiddur-server/modules/upgrade.xqm';
+            upg:all-schema-changes()
+            ">
+            <arg value="-qls"/>
+            <arg value="-u"/>
+            <arg value="admin"/>
+            <arg value="-P"/>
+            <arg value="${adminpassword}"/>
+            <arg value="-x"/>
+            <env key="DEBUG_OPTS" value="-Djava.endorsed.dirs=${installdir}/lib/optional:${installdir}/lib/endorsed:${installdir}/lib/user"/>
         </exec>
         <!-- reindex -->    
         <exec
